cabal-version:       >=1.10

name:                cryptopals
version:             0.1.0.0
-- description:
copyright:           2020 Stephen Radley
license:             MIT
license-file:        LICENSE
author:              Stephen Radley
maintainer:          stephen.t.radley@protonmail.com
build-type:          Simple

library
  exposed-modules:     Encoding
                     , Xor
                     , Score
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable S01C01
  main-is:             S01C01.hs
  ghc-options:         -Wall 
  build-depends:       base >=4.7 && <5
                     , cryptopals
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      app
  default-language:    Haskell2010

executable S01C02
  main-is:             S01C02.hs
  ghc-options:         -Wall 
  build-depends:       base >=4.7 && <5
                     , cryptopals
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      app
  default-language:    Haskell2010

executable S01C03
  main-is:             S01C03.hs
  ghc-options:         -Wall 
  build-depends:       base >=4.7 && <5
                     , cryptopals
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      app
  default-language:    Haskell2010

executable S01C04
  main-is:             S01C04.hs
  ghc-options:         -Wall 
  build-depends:       base >=4.7 && <5
                     , cryptopals
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      app
  default-language:    Haskell2010

executable S01C05
  main-is:             S01C05.hs
  ghc-options:         -Wall 
  build-depends:       base >=4.7 && <5
                     , cryptopals
                     , bytestring
                     , base64-bytestring
                     , containers
  hs-source-dirs:      app
  default-language:    Haskell2010

