cabal-version:       >=1.10

name:                cryptopals
version:             0.1.0.0
description:         Solutions to the cryptopals challenges.
license:             MIT
license-file:        LICENSE
author:              sradley
maintainer:          stephen.t.radley@protonmail.com
copyright:           2020 Stephen Radley
build-type:          Simple

library
  exposed-modules:     Cryptopals.Challenges
  other-modules:       Cryptopals.Util
                     , Cryptopals.Encoding.ASCII
                     , Cryptopals.Encoding.Hex
                     , Cryptopals.Encoding.Base64
                     , Cryptopals.Ciphers.XOR
                     , Cryptopals.Ciphers.AES
                     , Cryptopals.Statistics.Scoring
                     , Cryptopals.Statistics.HammingDistance
                     , Cryptopals.Padding
                     , Cryptopals.Random
                     , Cryptopals.Challenges.Challenge01
                     , Cryptopals.Challenges.Challenge02
                     , Cryptopals.Challenges.Challenge03
                     , Cryptopals.Challenges.Challenge04
                     , Cryptopals.Challenges.Challenge05
                     , Cryptopals.Challenges.Challenge06
                     , Cryptopals.Challenges.Challenge07
                     , Cryptopals.Challenges.Challenge08
                     , Cryptopals.Challenges.Challenge09
                     , Cryptopals.Challenges.Challenge10
                     , Cryptopals.Challenges.Challenge11
                     , Cryptopals.Challenges.Challenge12
  ghc-options:         -Wall
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , bytestring
                     , base64-bytestring
                     , cryptonite
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable cryptopals
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
                     , cryptopals
  hs-source-dirs:      app
  default-language:    Haskell2010
